Fixed dice rus text

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 OpenCase/node_modules/**
 OpenCase_Beta/node_modules/**
 OpenCase/tests/**
+OpenCase_Beta/RUS/uploadImagesTest.html
